[tool.poetry]
name = "delivery"
version = "0.1.0"
description = ""
authors = ["Thiago da Cunha Borges <thiagoborges@id.uff.br>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.2"
ipython = "^7.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
